# mygptapp

./: README.md  package.json  tailwind.config.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  mygpt.conf.example  tauri.conf.json
src-tauri/src/: main.rs
src/js/: alerts.js  conf.js
