[package]
name = "mygptapp"
version = "0.0.1"
description = "Use chatgpt with your own keys, and unlock a bit more utility from it."
authors = ["thomaswilley"]
license = "None"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mygpt = { git = "https://github.com/thomaswilley/mygpt.git", branch = "main" }
# mygpt = { path = "../../mygpt" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
